change the picture screenshot-cn.png

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -7,7 +7,7 @@
     <string name="chat_send_name">弗兰克</string>
     <string name="chat_send_content">你好世界，你好我</string>
     <string name="chat_from_date">2016&#8211;08&#8211;14 16:09:09</string>
-    <string name="chat_from_name">小精灵</string>
+    <string name="chat_from_name">小仙子</string>
     <string name="chat_from_content">你好</string>
     <string name="chat_welcome">我是小仙子，很高兴为你服务</string>
     <string name="empty_msg">文本内容为空，请输入</string>
